app/styles/rightSideMenu.css
/* rightSideMenu CSS */

.rightSideMenu {
  position: absolute;
  top: 40px;
  right: 0px;
  height: -moz-calc(100% - 127px);
  height: -webkit-calc(100% - 127px);
  height: calc(100% - 127px);
  width: 0;
  background-color: #fff;
  color: #000;
  box-shadow: 0 0 5px 2px #ccc;
  border-radius: 2px;
  z-index: 1000;
  font-size: 90%;
}


.rightSideMenu h3{
  font-size: 16px;
  padding-bottom: 15px;
  border-bottom:thin solid black;
}

.rightSideMenu ul{
  padding-left: 10px;
  padding-right: 10px;
  text-align: left;
}

.rightSideMenu li{
  border-bottom:thin solid rgba(152, 152, 152, 0.25);;
  padding: 5px;
}

.rightSideMenu li:hover{
  background-color: rgba(152, 152, 152, 0.28);
}


.rightSideMenuOpenBtn {
  position: absolute;
  top: 120px;
  left: -15px;
  height: 25px;
  width: 15px;
  background-color: #FFF;
  box-shadow: -3px 0 5px 1px #ccc;
  /*border-radius: 2px;*/
  border-style: none;
  z-index: 1001;
}

.rightSideMenuOpenBtn img{
  content:url(images/rightSideMenuBtn.png);
  width: 80%;
  /*padding-top: 2px;*/
  /*padding-bottom: 2px;*/
  padding: 2px  ;
  border-style: none;
  border: 0px;
  border-radius: 0px;
}

.rightSideMenuOpenBtn:active {
  background: #fff;
}

.rightSideMenuOpenBtn:focus {
  outline: none;
}


/*.slideLeft{
  right: 0px;
  -webkit-transition: width 0.4s ease-in-out, left 0.4s ease-in-out,right 0.4s ease-in-out;
  -moz-transition: width 0.4s ease-in-out, left 0.4s ease-in-out,right 0.4s ease-in-out;
  transition: width 0.4s ease-in-out, left 0.4s ease-in-out,right 0.4s ease-in-out;
}

.slideRight{
  right: -200px;
  -webkit-transition: width 0.4s ease-in-out, right 0.4s ease-in-out,left 0.4s ease-in-out;
  -moz-transition: width 0.4s ease-in-out, right 0.4s ease-in-out,left 0.4s ease-in-out;
  transition: width 0.4s ease-in-out, right 0.4s ease-in-out,left 0.4s ease-in-out;
}*/

.expandWidthTo200px{
  width: 200px;
  -webkit-transition: width 0.4s;
  -moz-transition: width 0.4s;
  transition: width 0.4s;
}

/*.shrinkWidthTo0px{
  width: 0px;
  -webkit-transition: width 0.4s;
  -moz-transition: width 0.4s;
  transition: width 0.4s;
}*/

